# ChangeLog for sys-kernel/calculate-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-sources-2.6.36.2 (28 Dec 2010)

  28 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.36.2.ebuild:
  Bump version.

*calculate-sources-2.6.35.8 (30 Oct 2010)

  30 Oct 2010; Трацевский Александр <alex@gentoo.org>
  -calculate-sources-2.6.35.7.ebuild, +calculate-sources-2.6.35.8.ebuild:
  version bump

*calculate-sources-2.6.35.7 (13 Oct 2010)

  13 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +files/4600_sched-bfs_2.6.35.patch, -calculate-sources-2.6.35.6.ebuild,
  +calculate-sources-2.6.35.7.ebuild, +files/4700_BFQ_2.6.35.patch,
  metadata.xml:
  New kernel version with patches BFQ and BFS.

*calculate-sources-2.6.32.24 (10 Oct 2010)

  10 Oct 2010; Трацевский Александр <alex@gentoo.org>
  -calculate-sources-2.6.32.22-r1.ebuild,
  -calculate-sources-2.6.32.23.ebuild, +calculate-sources-2.6.32.24.ebuild:
  bump version

*calculate-sources-2.6.35.6 (28 Sep 2010)
*calculate-sources-2.6.32.23 (28 Sep 2010)

  28 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-sources-2.6.32.23.ebuild, calculate-sources-2.6.35.5.ebuild,
  +calculate-sources-2.6.35.6.ebuild:
  bump versions

  23 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.32.22.ebuild,
  calculate-sources-2.6.32.22-r1.ebuild, -calculate-sources-2.6.34.6.ebuild,
  calculate-sources-2.6.34.7.ebuild:
  removed old version

*calculate-sources-2.6.35.5 (22 Sep 2010)

  22 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.35.5.ebuild:
  New version of kernel.

*calculate-sources-2.6.32.22-r1 (22 Sep 2010)

  22 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.32.22-r1.ebuild:
  Change eclass to calculate-kernel-old for kernel building.

*calculate-sources-2.6.34.6 (21 Sep 2010)
