@@ -16,10 +16,12 @@ DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c61803
 DIST linux-2.6.35.tar.bz2 69305709 RMD160 f5d91abb4fa72fac812578d830b22180d85a0e6f SHA1 4cb1fbfbeedcd658ca37739679c65dfaa136bf4e SHA256 18b2e2c336032e366c942622b77302cb05fc034fb19018f086a4ebc9ed41bfcf
 DIST linux-2.6.36.tar.bz2 70277083 RMD160 d739da505a79e71a1370d36e1373b36be055c123 SHA1 b546ab66458d7d614151d80adbc03b4d28977ae2 SHA256 15a076d1a435a6bf8e92834eba4b390b4ec094ce06d47f89d071ca9e5788ce04
 DIST patch-2.6.32.27.bz2 676264 RMD160 0e88faace47a53442cbbbcbf7f5f7802e00ba3ce SHA1 78111d270e40026e14fd8fe6524ff633ef9a41bc SHA256 a847710f1e1806d869042d85c015723be251dc9ccfb7ef624669e6f60252f423
+DIST patch-2.6.32.28.bz2 687529 RMD160 fd2ab29f3f3f4bd22ae3ca57f96d10f3cbda245d SHA1 5b9f13c580092dbedb70180de9553cac8f048684 SHA256 c0e7f8c438210e05b09c698a16990c355f218518b87e54046186c540e9bfa827
 DIST patch-2.6.35.9.bz2 184494 RMD160 875835bdd6726a0e8fcbefcdb91b09489cc548ba SHA1 49a7240a24b179553fa27873df4e65d288a2bdbe SHA256 337a1649110d5bd4d08b178b9437d88df692b2d4ed62b988083a132d0e057725
 DIST patch-2.6.36.2.bz2 98425 RMD160 92fdef7ecbc520f46d24b0981689fb2174cb3c0c SHA1 e70de463a1b3a287ef47f4950c3acb8f5b43ed99 SHA256 3ccff8d0ec6a6dfb76e86f8dc337ff00e699c5c9ea6d553866188b4d4555d3e5
 EBUILD calculate-sources-2.6.32.27.ebuild 741 RMD160 be7ac9ba69c0fdaac93557404c547621e1c93937 SHA1 cfa2b0ae9e5b1d6e134b28c055e4532bd7948a9d SHA256 64eb8b8bcc41963a457ea343aba414ae7e388260912b5e170db5e9298c23176c
+EBUILD calculate-sources-2.6.32.28.ebuild 754 RMD160 84f99a822f8d4078ffbd2373d40fd905a134794b SHA1 7808e3c4e2a54f9955b120dcbcf85f2fd8ab396b SHA256 959bb169c8427191cbf9a4e5c74e871bf699ae0eef17068fbc85b24d2bd55599
 EBUILD calculate-sources-2.6.35.9.ebuild 1324 RMD160 42d73ad5fcc292c90df73cbb0b4933ab7fbf4c74 SHA1 7a23fb44ad946e45f804bc9e7539905e36545124 SHA256 94fd25687d0f182ae4fa6a59c91605dbb326bffa171195bf92f837e96d3e6d64
 EBUILD calculate-sources-2.6.36.2.ebuild 1330 RMD160 c56242f09611ce06d193b9aae1acd42369b119ae SHA1 a02dde56690d2c9d99d7b8d21eb60cc7a15ce6c3 SHA256 ea756887d381b6fff444d5efe7f97c69d4917240ff93dd12f2d804a0fe9353ad
-MISC ChangeLog 4645 RMD160 3e58283371da96e04f9f62e235c65965f53c7e6d SHA1 80e194df5b4f9def9e94f37bf1b860b4c52e33db SHA256 31e11f75a8f70c0c130d77fbc07d8e40d91f6bae623899c957134db1da9349b9
+MISC ChangeLog 4822 RMD160 ed537f2b24b55f2beb1f7d65a0a107454933f622 SHA1 620fd0fbed08acc4f1c260c233b4f15ad6dc9e16 SHA256 7ecaadd218e950fba8633109320e11e9193cc345cab34a8f7e6b782c46ed2abd
 MISC metadata.xml 523 RMD160 855108e020b3f1fe32f843accc94a57f15affa0e SHA1 7fbeb862ff719c9ef63925b7f18104ff6eac27dd SHA256 997dc6d02e44eef86cc9653d7588b9f65e9033f02e28b3a8d98f48df82561f3c
