@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/calculate-sources
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*calculate-sources-2.6.32.28 (31 Jan 2011)
+
+  31 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-sources-2.6.32.28.ebuild:
+  New kernel version for server.
 
 *calculate-sources-2.6.36.2 (28 Dec 2010)
 
